# apis/api/v1/app/app.pb.validate.go
@@ -126,6 +126,35 @@ func (m *App) validate(all bool) error {
 	}
 
 	if all {
+		switch v := interface{}(m.GetCiConfig()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, AppValidationError{
+					field:  "CiConfig",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, AppValidationError{
+					field:  "CiConfig",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetCiConfig()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return AppValidationError{
+				field:  "CiConfig",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if all {
 		switch v := interface{}(m.GetCreatedAt()).(type) {
 		case interface{ ValidateAll() error }:
 			if err := v.ValidateAll(); err != nil {
@@ -232,6 +261,139 @@ var _ interface {
 } = AppValidationError{}
 
 var _App_Name_Pattern = regexp.MustCompile("^[a-z]([a-z0-9-]*[a-z0-9])?$")
+
+// Validate checks the field values on AppCIConfig with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *AppCIConfig) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AppCIConfig with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in AppCIConfigMultiError, or
+// nil if none found.
+func (m *AppCIConfig) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AppCIConfig) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if utf8.RuneCountInString(m.GetGitUrl()) > 512 {
+		err := AppCIConfigValidationError{
+			field:  "GitUrl",
+			reason: "value length must be at most 512 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if uri, err := url.Parse(m.GetGitUrl()); err != nil {
+		err = AppCIConfigValidationError{
+			field:  "GitUrl",
+			reason: "value must be a valid URI",
+			cause:  err,
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	} else if !uri.IsAbs() {
+		err := AppCIConfigValidationError{
+			field:  "GitUrl",
+			reason: "value must be absolute",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	// no validation rules for Dockerfile
+
+	if len(errors) > 0 {
+		return AppCIConfigMultiError(errors)
+	}
+
+	return nil
+}
+
+// AppCIConfigMultiError is an error wrapping multiple validation errors
+// returned by AppCIConfig.ValidateAll() if the designated constraints aren't met.
+type AppCIConfigMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AppCIConfigMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AppCIConfigMultiError) AllErrors() []error { return m }
+
+// AppCIConfigValidationError is the validation error returned by
+// AppCIConfig.Validate if the designated constraints aren't met.
+type AppCIConfigValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AppCIConfigValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AppCIConfigValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AppCIConfigValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AppCIConfigValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AppCIConfigValidationError) ErrorName() string { return "AppCIConfigValidationError" }
+
+// Error satisfies the builtin error interface
+func (e AppCIConfigValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAppCIConfig.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AppCIConfigValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AppCIConfigValidationError{}
 
 // Validate checks the field values on ListRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
