# apis/api/v1/ci/ci.pb.validate.go
@@ -1,473 +1,0 @@
-// Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: v1/ci/ci.proto
-
-package ci
-
-import (
-	"bytes"
-	"errors"
-	"fmt"
-	"net"
-	"net/mail"
-	"net/url"
-	"regexp"
-	"sort"
-	"strings"
-	"time"
-	"unicode/utf8"
-
-	"google.golang.org/protobuf/types/known/anypb"
-)
-
-// ensure the imports are used
-var (
-	_ = bytes.MinRead
-	_ = errors.New("")
-	_ = fmt.Print
-	_ = utf8.UTFMax
-	_ = (*regexp.Regexp)(nil)
-	_ = (*strings.Reader)(nil)
-	_ = net.IPv4len
-	_ = time.Duration(0)
-	_ = (*url.URL)(nil)
-	_ = (*mail.Address)(nil)
-	_ = anypb.Any{}
-	_ = sort.Sort
-)
-
-// Validate checks the field values on AppCIConfig with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *AppCIConfig) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on AppCIConfig with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in AppCIConfigMultiError, or
-// nil if none found.
-func (m *AppCIConfig) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *AppCIConfig) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetGitUrl()) > 512 {
-		err := AppCIConfigValidationError{
-			field:  "GitUrl",
-			reason: "value length must be at most 512 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if uri, err := url.Parse(m.GetGitUrl()); err != nil {
-		err = AppCIConfigValidationError{
-			field:  "GitUrl",
-			reason: "value must be a valid URI",
-			cause:  err,
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	} else if !uri.IsAbs() {
-		err := AppCIConfigValidationError{
-			field:  "GitUrl",
-			reason: "value must be absolute",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	// no validation rules for Dockerfile
-
-	if all {
-		switch v := interface{}(m.GetCreatedAt()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, AppCIConfigValidationError{
-					field:  "CreatedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, AppCIConfigValidationError{
-					field:  "CreatedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetCreatedAt()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return AppCIConfigValidationError{
-				field:  "CreatedAt",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(errors) > 0 {
-		return AppCIConfigMultiError(errors)
-	}
-
-	return nil
-}
-
-// AppCIConfigMultiError is an error wrapping multiple validation errors
-// returned by AppCIConfig.ValidateAll() if the designated constraints aren't met.
-type AppCIConfigMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m AppCIConfigMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m AppCIConfigMultiError) AllErrors() []error { return m }
-
-// AppCIConfigValidationError is the validation error returned by
-// AppCIConfig.Validate if the designated constraints aren't met.
-type AppCIConfigValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e AppCIConfigValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e AppCIConfigValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e AppCIConfigValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e AppCIConfigValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e AppCIConfigValidationError) ErrorName() string { return "AppCIConfigValidationError" }
-
-// Error satisfies the builtin error interface
-func (e AppCIConfigValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sAppCIConfig.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = AppCIConfigValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = AppCIConfigValidationError{}
-
-// Validate checks the field values on GetRequest with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *GetRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on GetRequest with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in GetRequestMultiError, or
-// nil if none found.
-func (m *GetRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *GetRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetName()) > 64 {
-		err := GetRequestValidationError{
-			field:  "Name",
-			reason: "value length must be at most 64 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if !_GetRequest_Name_Pattern.MatchString(m.GetName()) {
-		err := GetRequestValidationError{
-			field:  "Name",
-			reason: "value does not match regex pattern \"^[a-z]([a-z0-9-]*[a-z0-9])?$\"",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if len(errors) > 0 {
-		return GetRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// GetRequestMultiError is an error wrapping multiple validation errors
-// returned by GetRequest.ValidateAll() if the designated constraints aren't met.
-type GetRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m GetRequestMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m GetRequestMultiError) AllErrors() []error { return m }
-
-// GetRequestValidationError is the validation error returned by
-// GetRequest.Validate if the designated constraints aren't met.
-type GetRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e GetRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e GetRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e GetRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e GetRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e GetRequestValidationError) ErrorName() string { return "GetRequestValidationError" }
-
-// Error satisfies the builtin error interface
-func (e GetRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sGetRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = GetRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = GetRequestValidationError{}
-
-var _GetRequest_Name_Pattern = regexp.MustCompile("^[a-z]([a-z0-9-]*[a-z0-9])?$")
-
-// Validate checks the field values on ApplyRequest with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *ApplyRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on ApplyRequest with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in ApplyRequestMultiError, or
-// nil if none found.
-func (m *ApplyRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *ApplyRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetName()) > 64 {
-		err := ApplyRequestValidationError{
-			field:  "Name",
-			reason: "value length must be at most 64 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if !_ApplyRequest_Name_Pattern.MatchString(m.GetName()) {
-		err := ApplyRequestValidationError{
-			field:  "Name",
-			reason: "value does not match regex pattern \"^[a-z]([a-z0-9-]*[a-z0-9])?$\"",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if all {
-		switch v := interface{}(m.GetConfig()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, ApplyRequestValidationError{
-					field:  "Config",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, ApplyRequestValidationError{
-					field:  "Config",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetConfig()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return ApplyRequestValidationError{
-				field:  "Config",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(errors) > 0 {
-		return ApplyRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// ApplyRequestMultiError is an error wrapping multiple validation errors
-// returned by ApplyRequest.ValidateAll() if the designated constraints aren't met.
-type ApplyRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ApplyRequestMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ApplyRequestMultiError) AllErrors() []error { return m }
-
-// ApplyRequestValidationError is the validation error returned by
-// ApplyRequest.Validate if the designated constraints aren't met.
-type ApplyRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ApplyRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ApplyRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ApplyRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ApplyRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ApplyRequestValidationError) ErrorName() string { return "ApplyRequestValidationError" }
-
-// Error satisfies the builtin error interface
-func (e ApplyRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sApplyRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ApplyRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ApplyRequestValidationError{}
-
-var _ApplyRequest_Name_Pattern = regexp.MustCompile("^[a-z]([a-z0-9-]*[a-z0-9])?$")
